fpp_analysis/src/test/defs/duplicate-symbols-single.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/defs/duplicate-symbols-single.fpp:5:18
  |
5 |   active component C {
  |                    ^ redefinition of symbol C
  |
 ::: [ local path prefix ]/defs/duplicate-symbols-single.fpp:1:1
  |
1 | / passive component C {
2 | |
3 | | }
  | |_- previous definition is here

